<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" 
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent">
    <ScrollView 
		android:id="@+id/scroll_main" 
		android:background="@color/white_background" 
		android:layout_width="fill_parent" 
		android:layout_height="0.0dip" 
		android:layout_weight="1.0">
        <LinearLayout 
			android:orientation="vertical" 
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content">
            <FrameLayout 
				android:paddingLeft="@dimen/card_left_margin" 
				android:paddingTop="@dimen/card_top_margin" 
				android:paddingRight="@dimen/card_right_margin" 
				android:paddingBottom="@dimen/card_top_margin" 
				android:layout_width="fill_parent" 
				android:layout_height="@dimen/posting_hub_image_height">
                <LinearLayout 
					android:orientation="vertical" 
					android:id="@+id/publish_photos" 
					android:background="@drawable/shadow_right_bottom" 
					android:layout_width="fill_parent" 
					android:layout_height="fill_parent">
                    <FrameLayout 
						android:layout_width="fill_parent" 
						android:layout_height="0.0dip" 
						android:foreground="@drawable/click_orange_overlay" 
						android:layout_weight="1.0">
                        <LinearLayout 
							android:layout_gravity="center" 
							android:orientation="vertical" 
							android:layout_width="wrap_content" 
							android:layout_height="wrap_content">
                            <TextView
								android:textSize="@dimen/post_add_photos_text_size" 
								android:textColor="@color/publish_add_photos" 
								android:layout_gravity="center" 
								android:id="@+id/publish_add_photos" 
								android:layout_width="wrap_content" 
								android:layout_height="wrap_content" 
								android:text="@string/publish_add_photos"/>
                            <ImageView 
								android:layout_gravity="center" 
								android:layout_width="wrap_content" 
								android:layout_height="wrap_content" 
								android:layout_marginTop="@dimen/list_padding" 
								android:src="@drawable/ico_camera" 
								android:scaleType="centerCrop" 
								android:contentDescription="@string/app_name" />
                        </LinearLayout>
                    </FrameLayout>
                    <FrameLayout 
						android:layout_gravity="bottom" 
						android:id="@+id/publish_tip_container" 
						android:background="@color/publish_tip_background" 
						android:padding="@dimen/extra_small_padding" 
						android:layout_width="fill_parent" 
						android:layout_height="wrap_content">
                        <TextView 
							android:textSize="@dimen/post_photos_text_size" 
							android:textColor="@color/white" 
							android:gravity="center_vertical" 
							android:layout_gravity="center" 
							android:id="@+id/publish_tip_images" 
							android:layout_width="wrap_content" 
							android:layout_height="wrap_content" 
							android:text="@string/publish_add_photos_tip" 
							android:drawablePadding="5.0dip" />
                    </FrameLayout>
                </LinearLayout>
                <FrameLayout 
					android:id="@+id/publish_image_container" 
					android:layout_width="fill_parent" 
					android:layout_height="fill_parent">
                    <ImageView 
						android:id="@+id/publish_image" 
						android:layout_width="fill_parent" 
						android:layout_height="fill_parent" 
						android:scaleType="centerCrop" 
						android:contentDescription="@string/app_name" />
                    <FrameLayout 
						android:layout_gravity="bottom" 
						android:background="@color/publish_tip_background" 
						android:padding="@dimen/extra_small_padding" 
						android:layout_width="fill_parent" 
						android:layout_height="wrap_content">
                        <TextView
							android:textSize="@dimen/post_photos_text_size" 
							android:textColor="@color/white" 
							android:gravity="center_vertical" 
							android:layout_gravity="center" 
							android:id="@+id/publish_images_number" 
							android:layout_width="wrap_content" 
							android:layout_height="wrap_content" 
							android:text="@string/app_name"/>
                    </FrameLayout>
                </FrameLayout>
            </FrameLayout>
            <LinearLayout 
				android:orientation="vertical" 
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content">
                <FrameLayout 
					android:id="@+id/publish_category" 
					android:background="@drawable/shadow_right_bottom" 
					android:padding="@dimen/posting_hub_generic_margin" 
					android:layout_width="fill_parent" 
					android:layout_height="wrap_content" 
					android:layout_marginLeft="@dimen/card_left_margin" 
					android:layout_marginRight="@dimen/card_right_margin" 
					android:foreground="@drawable/click_orange_overlay">
                    
                    <LinearLayout 
                        android:orientation="vertical"
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content"
					    android:layout_marginRight="60.0dip">
	                    <TextView 
							android:textSize="@dimen/forms_text_size" 
							android:textColor="@color/forms_text_color" 
							android:id="@+id/publish_text_category" 
							android:layout_width="fill_parent" 
							android:layout_height="wrap_content" 
							android:text="@string/publish_select_category" />
	                     <Spinner 
				        	android:id="@+id/publish_category_spinner"
				        	android:gravity="center_vertical" 
				        	android:layout_marginTop="10dip"
				        	android:layout_width="fill_parent" 
							android:layout_height="wrap_content" 
							android:entries="@array/country_arrays"/>
                    </LinearLayout>
                    <ImageView 
						android:layout_gravity="right" 
						android:id="@+id/publish_number_one" 
						android:layout_width="wrap_content" 
						android:layout_height="wrap_content" 
						android:src="@drawable/ico_post_one" 
						android:contentDescription="@string/app_name" />
                </FrameLayout>
                <FrameLayout 
					android:id="@+id/publish_describe" 
					android:background="@drawable/shadow_right_bottom" 
					android:padding="@dimen/posting_hub_generic_margin" 
					android:layout_width="fill_parent" 
					android:layout_height="wrap_content" 
					android:layout_marginLeft="@dimen/card_left_margin" 
					android:layout_marginTop="@dimen/card_top_margin" 
					android:layout_marginRight="@dimen/card_right_margin" 
					android:foreground="@drawable/click_orange_overlay">
                    <TextView 
						android:textSize="@dimen/forms_text_size" 
						android:textColor="@color/forms_text_color" 
						android:id="@+id/publish_text_describe" 
						android:layout_width="fill_parent" 
						android:layout_height="wrap_content" 
						android:layout_marginRight="60.0dip" 
						android:text="@string/publish_describe_ad"/>
                    <LinearLayout 
						android:layout_gravity="center_vertical" 
						android:layout_marginTop="20dip"
						android:orientation="vertical" 
						android:layout_width="match_parent" 
						android:layout_height="wrap_content" 
						android:layout_marginRight="60.0dip">
                        <EditText 
							android:textSize="@dimen/forms_medium_text_size" 
							android:textColor="@color/forms_text_color" 
							android:id="@+id/publish_text_title" 
							android:layout_width="fill_parent" 
							android:hint="Enter Title"
							android:layout_height="wrap_content"/>
                        <EditText 
							android:textSize="@dimen/forms_medium_text_size" 
							android:textColor="@color/forms_text_color" 
							android:id="@+id/publish_text_description" 
							android:layout_width="fill_parent" 
							android:hint="Enter Description"
						    android:layout_height="wrap_content"/>
                        <EditText 
							android:textSize="@dimen/forms_medium_text_size" 
							android:textColor="@color/forms_text_color" 
							android:id="@+id/publish_text_price" 
							android:hint="Enter Price"
							android:layout_width="fill_parent" 
							android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <ImageView 
						android:layout_gravity="right" 
						android:id="@+id/publish_number_two" 
						android:layout_width="wrap_content" 
						android:layout_height="wrap_content" 
						android:src="@drawable/ico_post_two" 
						android:contentDescription="@string/app_name" />
                </FrameLayout>
                <FrameLayout 
					android:id="@+id/publish_contact" 
					android:background="@drawable/shadow_right_bottom" 
					android:padding="@dimen/posting_hub_generic_margin" 
					android:layout_width="fill_parent" 
					android:layout_height="wrap_content" 
					android:layout_marginLeft="@dimen/card_left_margin" 
					android:layout_marginTop="@dimen/card_top_margin" 
					android:layout_marginRight="@dimen/card_right_margin" 
					android:layout_marginBottom="@dimen/card_top_margin" 
					android:foreground="@drawable/click_orange_overlay">
                    <TextView 
						android:textSize="@dimen/forms_text_size" 
						android:textColor="@color/forms_text_color" 
						android:id="@+id/publish_text_contact" 
						android:layout_width="fill_parent" 
						android:layout_height="wrap_content" 
						android:layout_marginRight="60.0dip" 
						android:text="@string/publish_contact"/>
                    <LinearLayout 
						android:layout_gravity="center_vertical" 
						android:orientation="vertical" 
						android:layout_marginTop="20dip"
						android:layout_width="fill_parent" 
						android:layout_height="wrap_content" 
						android:layout_marginRight="60.0dip">
                        <EditText
							android:textSize="@dimen/forms_medium_text_size" 
							android:textColor="@color/forms_text_color" 
							android:id="@+id/publish_text_contact_name" 
							android:layout_width="fill_parent" 
							android:layout_height="wrap_content" 
							android:hint="Enter Contact Name"/>
                        <EditText 
							android:textSize="@dimen/forms_medium_text_size" 
							android:textColor="@color/forms_text_color" 
							android:id="@+id/publish_text_contact_email" 
							android:layout_width="fill_parent" 
							android:layout_height="wrap_content" 
							android:inputType="textEmailAddress"
							android:hint="Enter Email"/>
                        <EditText 
							android:textSize="@dimen/forms_medium_text_size" 
							android:textColor="@color/forms_text_color" 
							android:id="@+id/publish_text_contact_phone" 
							android:layout_width="fill_parent" 
							android:layout_height="wrap_content" 
							android:inputType="phone"
							android:hint="Enter Phone number"/>
                        <EditText 
							android:textSize="@dimen/forms_medium_text_size" 
							android:textColor="@color/forms_text_color" 
							android:id="@+id/publish_text_contact_location" 
							android:layout_width="fill_parent" 
							android:layout_height="wrap_content" 
							android:hint="Enter Location"/>
                    </LinearLayout>
                    <ImageView 
							android:layout_gravity="right" 
							android:id="@+id/publish_number_three" 
							android:layout_width="wrap_content" 
							android:layout_height="wrap_content" 
							android:src="@drawable/ico_post_three" 
							android:contentDescription="@string/app_name" />
                </FrameLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <TextView
        android:id="@+id/txtPercentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/txt_font"
        android:textSize="30dp" />
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="20dp"
        android:layout_marginBottom="35dp" 
        android:visibility="gone"/>
    
    <Button 
		android:textSize="@dimen/forms_text_size" 
		android:textColor="@color/white" 
		android:gravity="center" 
		android:id="@+id/publish_post" 
		android:background="@color/purple_middle" 
		android:padding="15.0dip" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:text="@string/publish_post"/>
    <com.google.android.gms.ads.AdView
        android:id="@+id/publish_page_adView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/category_list_banner">
    </com.google.android.gms.ads.AdView>
    
</LinearLayout>
